Api refactor (#6)
* feat: refactor api

Ditch the code-gen server and write the API by hand

* feat: add proxy endpoint
